samples/_failures_safe/1761392898_818184_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecb23da0.c: In function ‘main’:
./samples/SAFE/__tmp_ecb23da0.c:173:5: error: expected expression at end of input
  173 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_ecb23da0.c:173:5: error: expected declaration or statement at end of input
